tests/compile_errors/match-duplicate-condition-same-branch.buzz
// Duplicate `match` condition
test "match duplicate condition in same branch" {
    _ = match (1) {
        1, 1 -> "one",
        else -> "other",
    };
}
